prevented leaking, or bleeding in stylesheet

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -56,12 +56,16 @@ body.active_admin.logged_out{
         background: -ms-linear-gradient(top,  #27476a 0%,#0b141e 100%); /* IE10+ */
         background: linear-gradient(to bottom,  #27476a 0%,#0b141e 100%); /* W3C */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#27476a', endColorstr='#0b141e',GradientType=0 ); /* IE6-8 */
-        -webkit-border-top-left-radius: 16px;
-        -webkit-border-top-right-radius: 16px;
-        -moz-border-radius-topleft: 16px;
-        -moz-border-radius-topright: 16px;
-        border-top-left-radius: 16px;
-        border-top-right-radius: 16px;
+        -webkit-border-top-left-radius: 18px;
+        -webkit-border-top-right-radius: 18px;
+        -moz-border-radius-topleft: 18px;
+        -moz-border-radius-topright: 18px;
+        border-top-left-radius: 18px;
+        border-top-right-radius: 18px;
+        /* Prevent background color leak outs */
+        -webkit-background-clip: padding-box; 
+        -moz-background-clip:    padding; 
+        background-clip:         padding-box;
         padding:8px;
       }
       form input[type=submit]{
